--- a/html/about.html
+++ b/html/about.html
@@ -17,7 +17,7 @@
 
   <main class="about">
     <h3>About Cita</h3>
-    <p>This simple web app takes an input of your citation from google scholar in APA format and converts it to the Unilag format</p>
+    <p>This simple web application takes an input of your citation (APA) as copied from google scholar and edits it to standard</p>
 
     <strong>Reasons you MAY not get desired result: </strong>
     <ul>
@@ -28,13 +28,12 @@
 
     <strong>PS: </strong>
     <p>You may still need to manually expand some abbriviations <br> <i>e.g Bmj = British Medical Journal</i></p>
-    <p>Please ensure to take a quick look at all the converted citations just in case we have not been perfect. ;)</p>
 
     <p>Thank you and hope you enjoy using cita</p>
   </main>
 
   <footer>
-    <p>Created with love by Creativogee</p>
+    <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
   </footer>
 </body>
 </html>
