--- a/html/index.html
+++ b/html/index.html
@@ -21,16 +21,17 @@
     <form class="input-citation-form" action="">
       <label for="rawCitation">Citation: </label>
       <input id="rawCitation" class="raw-citation" type="text" placeholder="Please paste your citation here (APA format only)">
-      <button id="convertButton" class="btn convert">Convert</button>
+      <button id="convertButton" class="btn convert">Edit</button>
       <div class="result-wrapper">
         <p id="result" class="result"></p>
-        <div class="hint"><p>**triple click o the result to select all then copy</p></div>
+        <div class="hint"><p>**triple click on the result to select all then copy</p></div>
       </div>
+      <p id="modal" class="modal invisible">...</p>
     </form>
   </main>
 
   <footer>
-    <p>Created with love by Creativogee</p>
+    <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
   </footer>
 </body>
 </html>
