--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
   <link
   rel="shortcut icon"
   type="image/png"
-  href="../image/icon-72x72.png"
+  href="image/icon-72x72.png"
 />
 <link
 rel="apple-touch-icon"
 type="image/png"
-href="../images/icon-192x192.png"
+href="images/icon-192x192.png"
 />
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="manifest" href="../manifest.json" />
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="manifest" href="manifest.json" />
   <title>Home | Cita</title>
 </head>
 <body>
