--- a/public/about.html
+++ b/public/about.html
@@ -9,9 +9,14 @@
   <link
   rel="shortcut icon"
   type="image/png"
-  href="../image/icon-72x72.png"
+  href="image/icon-72x72.png"
 />
-  <link rel="stylesheet" href="../css/main.css">
+<link
+rel="apple-touch-icon"
+type="image/png"
+href="images/icon-192x192.png"
+/>
+  <link rel="stylesheet" href="css/main.css">
   <title>About | Cita</title>
 </head>
 <body>
