hint for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@ href="images/icon-192x192.png"
       <button id="convertButton" class="btn convert">Edit</button>
       <div class="result-wrapper">
         <p id="result" class="result"></p>
-        <div class="hint"><p>**triple click on the result to select all then copy</p></div>
+        <div id="hint" class="hint"><p>**triple click on the result to select all then copy</p></div>
       </div>
       <p id="modal" class="modal invisible"></p>
     </form>
