--- a/public/about.html
+++ b/public/about.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Description" content="Simple web app which takes an input of citations (APA) as copied from google scholar and edits to standard">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="Simple web app which takes an input of citations (APA) as copied from google scholar and edits to standard"
+    />
 
-  <link
-  rel="shortcut icon"
-  type="image/png"
-  href="image/icon-72x72.png"
-/>
-<link
-rel="apple-touch-icon"
-type="image/png"
-href="images/icon-192x192.png"
-/>
-  <link rel="stylesheet" href="css/main.css">
-  <title>About | Cita</title>
-</head>
-<body>
-  <header>
-    <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-  </nav>
-  </header>
+    <link rel="shortcut icon" type="image/png" href="image/icon-72x72.png" />
+    <link rel="apple-touch-icon" type="image/png" href="images/icon-192x192.png" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>About | Cita</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+      </nav>
+    </header>
 
-  <main class="about">
-    <h3>About Cita</h3>
-    <p>This simple web application takes an input of your citation (APA) as copied from google scholar and edits it to standard</p>
-    <br>
-    <strong>Reasons you MAY not get desired result: </strong>
-    <ul>
-      <li>The citation is not copied from google scholar</li>
-      <li>The citation is not in APA format</li>
-      <li>The citation is just wierd, lol</li>
-    </ul>
-    <br>
-    <p>Thank you and hope you enjoy using cita</p>
-  </main>
+    <main class="about">
+      <h3>About Cita</h3>
+      <p>
+        This simple web application takes an input of your citation (APA) as copied from google
+        scholar and edits it to standard
+      </p>
+      <div class="tutorial-link">
+        <a target="_blank" href="https://youtu.be/z86HjW-0J3w"
+          >Click here to watch video tutorial</a
+        >
+      </div>
+      <br />
 
-  <footer>
-    <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
-  </footer>
-</body>
+      <strong>Reasons you MAY not get desired result: </strong>
+      <ul>
+        <li>The citation is not copied from google scholar</li>
+        <li>The citation is not in APA format</li>
+        <li>The citation is just wierd, lol</li>
+      </ul>
+      <br />
+      <p>Thank you and hope you enjoy using cita</p>
+    </main>
+
+    <footer>
+      <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
+    </footer>
+  </body>
 </html>
