--- a/public/cita-list.html
+++ b/public/cita-list.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="image/icon-72x72.png" />
     <link rel="apple-touch-icon" type="image/png" href="images/icon-192x192.png" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>About | Cita</title>
+    <title>List | Cita</title>
   </head>
   <body>
     <header>
@@ -22,31 +22,26 @@
       </nav>
     </header>
 
+    <div class="counter-wrapper">
+      <a href="cita-list.html">
+        <div id="listCounter" class="list-counter invisible">
+          <span id="counter"></span>
+        </div>
+      </a>
+    </div>
     <main class="line-y">
-      <h3>About Cita</h3>
-      <p>
-        This simple web application takes an input of your citation (APA) as copied from google
-        scholar and edits it to standard
-      </p>
-      <div class="tutorial-link">
-        <a target="_blank" href="https://youtu.be/z86HjW-0J3w"
-          >Click here to watch video tutorial</a
-        >
+      <div id="list-wrapper" class="list-wrapper"></div>
+      <div class="btn-container">
+        <button id="copyAllButton" class="btn btn-mini">Select All</button>
+        <button id="clearButton" class="btn btn-mini">Clear</button>
       </div>
-      <br />
-
-      <strong>Reasons you MAY not get desired result: </strong>
-      <ul>
-        <li>The citation is not copied from google scholar</li>
-        <li>The citation is not in APA format</li>
-        <li>The citation is just wierd, lol</li>
-      </ul>
-      <br />
-      <p>Thank you and hope you enjoy using cita</p>
     </main>
 
     <footer>
       <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
     </footer>
+    <script type="module" src="../js/app.js"></script>
+    <script type="module" src="../js/ui.js"></script>
+    <script src="../js/config.js"></script>
   </body>
 </html>
