--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,15 @@
       </nav>
     </header>
 
+    <div class="home-counter-wrapper">
+      <a href="cita-list.html"
+        ><div id="homeCounter" class="home-counter invisible"><span id="counter"></span></div
+      ></a>
+    </div>
     <main>
       <form class="input-citation-form" action="">
         <label for="rawCitation">Citation: </label>
+
         <textarea
           rows="2"
           id="rawCitation"
@@ -33,14 +39,13 @@
           placeholder="Please paste your citation here (APA format only)"
         ></textarea>
         <button id="convertButton" class="btn">Edit</button>
+
         <div class="result-wrapper">
-          <p id="result" class="result"></p>
-          <div id="hint" class="hint">
-            <p>**triple click to copy formated text</p>
-          </div>
+          <p id="result"></p>
+          <p id="inText" class="in-text"></p>
         </div>
         <div class="btn-container">
-          <button id="copyButton" class="btn btn-mini">Copy Plain Text</button>
+          <button id="copyButton" class="btn btn-mini">Select Result</button>
           <button id="clearButton" class="btn btn-mini">Clear</button>
         </div>
         <p id="modal" class="modal invisible"></p>
@@ -50,6 +55,7 @@
     <footer>
       <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
     </footer>
+    <script type="module" src="../js/store.js"></script>
     <script type="module" src="../js/app.js"></script>
     <script type="module" src="../js/ui.js"></script>
     <script src="../js/config.js"></script>
