--- a/public/about.html
+++ b/public/about.html
@@ -22,7 +22,7 @@
       </nav>
     </header>
 
-    <main class="line-y">
+    <main class="about">
       <h3>About Cita</h3>
       <p>
         This simple web application takes an input of your citation (APA) as copied from google
