--- a/public/cita-list.html
+++ b/public/cita-list.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="image/icon-72x72.png" />
     <link rel="apple-touch-icon" type="image/png" href="images/icon-192x192.png" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>List | Cita</title>
+    <title>End-Ref | Cita</title>
   </head>
   <body>
     <header>
