--- a/public/end-citations.html
+++ b/public/end-citations.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="image/icon-72x72.png" />
     <link rel="apple-touch-icon" type="image/png" href="images/icon-192x192.png" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>End-Ref | Cita</title>
+    <title>CItations | Cita</title>
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
     </header>
 
     <div class="counter-wrapper">
-      <a href="cita-list.html">
+      <a href="end-citations.html">
         <div id="listCounter" class="list-counter invisible">
           <span id="counter"></span>
         </div>
@@ -33,7 +33,7 @@
       <div id="list-wrapper" class="list-wrapper"></div>
       <div class="btn-container">
         <button id="copyAllButton" class="btn btn-mini">Select All</button>
-        <button id="clearButton" class="btn btn-mini">Clear</button>
+        <button id="clearAllButton" class="btn btn-mini">Clear All</button>
       </div>
     </main>
 
