--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="home-counter-wrapper">
-      <a href="cita-list.html"
+      <a href="end-citations.html"
         ><div id="homeCounter" class="home-counter invisible"><span id="counter"></span></div
       ></a>
     </div>
