--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
       <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
     </footer>
     <script type="module" src="../js/store.js"></script>
+    <script type="module" src="../js/helpers/store.js"></script>
     <script type="module" src="../js/app.js"></script>
     <script type="module" src="../js/ui.js"></script>
     <script src="../js/config.js"></script>
