--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -9,10 +9,10 @@
       name="Description"
       content="Simple web app which takes an input of citations (APA) as copied from google scholar and edits to standard"
     />
-    <link rel="shortcut icon" type="image/png" href="image/icon-72x72.png" />
-    <link rel="apple-touch-icon" type="image/png" href="images/icon-192x192.png" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
+    <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="manifest" href="../manifest.json" />
     <title>Home | Cita</title>
   </head>
   <body>
@@ -24,7 +24,7 @@
     </header>
 
     <div class="home-counter-wrapper">
-      <a href="end-citations.html"
+      <a href="references.html"
         ><div id="homeCounter" class="home-counter invisible"><span id="counter"></span></div
       ></a>
     </div>
@@ -55,10 +55,8 @@
     <footer>
       <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
     </footer>
-    <script type="module" src="../js/store.js"></script>
-    <script type="module" src="../js/helpers/store.js"></script>
-    <script type="module" src="../js/app.js"></script>
-    <script type="module" src="../js/ui.js"></script>
+    <script type="module" src="../js/algo/index.js"></script>
+    <script type="module" src="../js/index.js"></script>
     <script src="../js/config.js"></script>
   </body>
 </html>
