--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -9,9 +9,9 @@
       content="Simple web app which takes an input of citations (APA) as copied from google scholar and edits to standard"
     />
 
-    <link rel="shortcut icon" type="image/png" href="image/icon-72x72.png" />
-    <link rel="apple-touch-icon" type="image/png" href="images/icon-192x192.png" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
+    <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>About | Cita</title>
   </head>
   <body>
