--- a/public/pages/references.html
+++ b/public/pages/references.html
@@ -9,9 +9,9 @@
       content="Simple web app which takes an input of citations (APA) as copied from google scholar and edits to standard"
     />
 
-    <link rel="shortcut icon" type="image/png" href="image/icon-72x72.png" />
-    <link rel="apple-touch-icon" type="image/png" href="images/icon-192x192.png" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
+    <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>CItations | Cita</title>
   </head>
   <body>
@@ -23,7 +23,7 @@
     </header>
 
     <div class="counter-wrapper">
-      <a href="end-citations.html">
+      <a href="references.html">
         <div id="listCounter" class="list-counter invisible">
           <span id="counter"></span>
         </div>
@@ -41,7 +41,7 @@
       <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
     </footer>
     <script type="module" src="../js/app.js"></script>
-    <script type="module" src="../js/ui.js"></script>
+    <script type="module" src="../js/index.js"></script>
     <script src="../js/config.js"></script>
   </body>
 </html>
