ready to deploy

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -53,7 +53,13 @@
     </main>
 
     <footer>
-      <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
+      <div class="footer">
+        <div class="donate">
+          <a href="https://www.paypal.com/donate?hosted_button_id=Z9NGDEGSC3LPY">Buy me coffee</a>
+        </div>
+
+        <p>Created with <span class="love">&#10084;</span> by Creativogee</p>
+      </div>
     </footer>
     <script type="module" src="../js/algo/index.js"></script>
     <script type="module" src="../js/index.js"></script>
