--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="Description"
-      content="Simple web app which takes an input of citations (APA) as copied from google scholar and edits to standard"
+      content="Simple web app which convert references from APA to Havard format"
     />
 
     <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
