--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#0b2b40" />
     <meta
       name="Description"
-      content="Simple web app which takes an input of citations (APA) as copied from google scholar and edits to standard"
+      content="Simple web app which convert references from APA to Havard format"
     />
     <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
     <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
@@ -23,12 +23,12 @@
       </nav>
     </header>
 
-    <div class="home-counter-wrapper">
-      <a href="references.html"
-        ><div id="homeCounter" class="home-counter invisible"><span id="counter"></span></div
-      ></a>
-    </div>
     <main>
+      <div class="counter-wrapper">
+        <a href="references.html"
+          ><div id="homeCounter" class="counter invisible"><span id="counter"></span></div
+        ></a>
+      </div>
       <form class="input-citation-form" action="">
         <label for="rawCitation">Citation: </label>
 
