--- a/public/pages/references.html
+++ b/public/pages/references.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="Description"
-      content="Simple web app which takes an input of citations (APA) as copied from google scholar and edits to standard"
+      content="Simple web app which convert references from APA to Havard format"
     />
 
     <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
@@ -22,14 +22,14 @@
       </nav>
     </header>
 
-    <div class="counter-wrapper">
-      <a href="references.html">
-        <div id="listCounter" class="list-counter invisible">
-          <span id="counter"></span>
-        </div>
-      </a>
-    </div>
     <main class="line-y">
+      <div class="counter-wrapper">
+        <a href="references.html">
+          <div id="listCounter" class="counter invisible">
+            <span id="counter"></span>
+          </div>
+        </a>
+      </div>
       <div id="list-wrapper" class="list-wrapper"></div>
       <div class="btn-container">
         <button id="copyAllButton" class="btn btn-mini">Select All</button>
