--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -24,10 +24,7 @@
 
     <main class="about">
       <h3>About Cita</h3>
-      <p>
-        This simple web application takes an input of your citation (APA) as copied from google
-        scholar and edits it to standard
-      </p>
+      <p>This simple web application converts references from APA to Harvard format</p>
       <div class="tutorial-link">
         <a target="_blank" href="https://youtu.be/z86HjW-0J3w"
           >Click here to watch video tutorial</a
