adsense added to sire

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -31,7 +31,11 @@
         >
       </div>
       <br />
-
+      <script
+        async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4839544550395403"
+        crossorigin="anonymous"
+      ></script>
       <strong>Reasons you MAY not get desired result: </strong>
       <ul>
         <li>The citation is not copied from google scholar</li>
