--- a/public/pages/references.html
+++ b/public/pages/references.html
@@ -8,7 +8,11 @@
       name="Description"
       content="Simple web app which convert references from APA to Havard format"
     />
-
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4839544550395403"
+      crossorigin="anonymous"
+    ></script>
     <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
     <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
     <link rel="stylesheet" href="../css/main.css" />
