--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Adsense script -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4839544550395403"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,11 +15,6 @@
       name="Description"
       content="Simple web app which convert references from APA to Havard format"
     />
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4839544550395403"
-      crossorigin="anonymous"
-    ></script>
     <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
     <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
     <link rel="stylesheet" href="../css/main.css" />
