fixed the last error handling

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -23,7 +23,12 @@
 
     <main class="about">
       <h3>About Cita</h3>
-      <p>This simple web application converts references from APA to Harvard format</p>
+      <p>
+        Cita is a simple to use web application that helps you convert references from APA to
+        Harvard format, generating your intext- and end-references in one click. It also helps to
+        store your end-references so you can copy them all at once later.
+      </p>
+
       <div class="tutorial-link">
         <a target="_blank" href="https://youtu.be/z86HjW-0J3w"
           >Click here to watch video tutorial</a
@@ -37,12 +42,15 @@
       ></script>
       <strong>Reasons you MAY not get desired result: </strong>
       <ul>
-        <li>The citation is not copied from google scholar</li>
-        <li>The citation is not in APA format</li>
-        <li>The citation is just wierd, lol</li>
+        <li>- The citation is not copied from google scholar</li>
+        <li>- The citation is not in APA format</li>
+        <li>- The citation is just wierd, lol</li>
       </ul>
       <br />
-      <p>Thank you and hope you enjoy using cita</p>
+      <p>
+        If you enjoy using Cita, please share the link:
+        <span class="link">creativogee-cita.netlify.app</span> with your colleagues. Thank you😁
+      </p>
     </main>
 
     <footer>
