--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
     <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>About | Cita</title>
+    <title>About | Citar</title>
   </head>
   <body>
     <header>
@@ -22,9 +22,9 @@
     </header>
 
     <main class="about">
-      <h3>About Cita</h3>
+      <h3>About Citar</h3>
       <p>
-        Cita is a simple to use web application that helps you convert references from APA to
+        Citar is a simple to use web application that helps you convert references from APA to
         Harvard format, generating your intext- and end-references in one click. It also helps to
         store your end-references so you can copy them all at once later.
       </p>
@@ -42,14 +42,13 @@
       ></script>
       <strong>Reasons you MAY not get desired result: </strong>
       <ul>
-        <li>- The citation is not copied from google scholar</li>
-        <li>- The citation is not in APA format</li>
-        <li>- The citation is just wierd, lol</li>
+        <li>- The reference is not in APA format</li>
+        <li>- The reference is just wierd, lol</li>
       </ul>
       <br />
       <p>
-        If you enjoy using Cita, please share the link:
-        <span class="link">creativogee-cita.netlify.app</span> with your colleagues. Thank you😁
+        If you enjoy using Citar, please share the link:
+        <span class="link">citar.netlify.app</span> with your colleagues. Thank you😁
       </p>
     </main>
 
