--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="manifest" href="../manifest.json" />
-    <title>Home | Cita</title>
+    <title>Home | Citar</title>
   </head>
   <body>
     <header>
