--- a/public/pages/references.html
+++ b/public/pages/references.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="../image/icon-72x72.png" />
     <link rel="apple-touch-icon" type="image/png" href="../images/icon-192x192.png" />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>References | Cita</title>
+    <title>References | Citar</title>
   </head>
   <body>
     <header>
